--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "node_modules/.bin/webpack",
+    "dev": "node_modules/.bin/webpack",
+    "production": "node ./node_modules/cross-env/dist/bin/cross-env.js NODE_ENV=production node_modules/.bin/webpack",
     "watch": "node_modules/.bin/webpack --watch"
   },
   "keywords": [],
@@ -14,7 +15,11 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
+    "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   }
